@@ -34,4 +34,14 @@
     <list list_name="Segments" />
   </list_group>
 
+  <list_group list_group_name="Cost">
+    <list list_name="Cost">
+      <list_item item_name="Cheap" />
+      <list_item item_name="A bargain" />
+      <list_item item_name="Moderate" />
+      <list_item item_name="Pricey" />
+      <list_item item_name="Expensive" />
+    </list>
+  </list_group>
+
 </list_groups>
